round of user return, v1 rusers skip

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -18,9 +18,9 @@
         
 template(name='say')
     if skv_is 'talking' true
-        i.volume.up.green.link.circular.loading.large.icon.quiet
+        i.volume.up.green.link.loading.large.icon.quiet
     else
-        i.volume.off.link.circular.icon.say_this
+        i.volume.off.link.icon.say_this
 
 // // template(name='viewed')
 // //     .ui.header viewed by
