--- a/lib/blocks.jade
+++ b/lib/blocks.jade
@@ -242,7 +242,7 @@ template(name='big_user_card')
 
 
 template(name='user_info')
-    a.ui.compact.basic.circular.button(href="/user/#{user.username}/")
+    a.ui.compact.basic.button(href="/user/#{user.username}/")
         if user.profile_image_id
             img.ui.avatar.image(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}")
         //- .visible.content
@@ -255,21 +255,21 @@ template(name='user_info_small')
         if user.profile_image_id
             img.ui.avatar.image(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}" title=name)
         else
-            i.circular.user.outline.icon(title=user.name)
+            i.user.outline.icon(title=user.name)
 
 template(name='user_info_tiny')
     a(href="/user/#{user.username}/")
         // if user.profile_image_id
         //     img.ui.avatar.image(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}" title=name)
         // else
-        //     i.circular.user.outline.icon(title=user.name)
+        //     i.user.outline.icon(title=user.name)
         .ui.basic.tiny.label #{user.shortname}
 
 template(name='user_avatar')
     if user.profile_image_id
         img.ui.avatar.image(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}" title=name)
     else
-        i.circular.user.outline.icon(title=user.name)
+        i.user.outline.icon(title=user.name)
 
 
 template(name='username_info')
@@ -305,7 +305,7 @@ template(name='creation_info')
 
 template(name='user_list_toggle')
     if currentUser
-        .ui.icon.compact.circular.button.toggle(class=user_list_toggle_class title=label)
+        .ui.icon.compact.button.toggle(class=user_list_toggle_class title=label)
             i.large.icon(class=icon)
             // |#{label}
         //- each list_users
@@ -495,7 +495,7 @@ template(name='user_string_toggle')
 
 
 template(name='key_value_edit')
-    a.ui.compact.large.circular.button.set_key_value(class=set_key_value_class title=value href='#')
+    a.ui.compact.large.button.set_key_value(class=set_key_value_class title=value href='#')
         if icon
             // +icon name=icon cl='ui avatar image'
             i.icon(class=icon)
