--- a/parts/profile.jade
+++ b/parts/profile.jade
@@ -6,10 +6,10 @@ template(name='profile')
                     .four.wide.column
                         span.mobile.only
                             a(href="/user/#{username}/")
-                                img.ui.centered.tiny.inline.spaced.circular.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+                                img.ui.centered.tiny.inline.spaced.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
                         span.mobile.hidden
                             a(href="/user/#{username}/")
-                                img.ui.centered.fluid.circular.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
+                                img.ui.centered.fluid.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
                         a.ui.header.refresh_user_stats(href="/user/#{username}") 
                             // if spirit_animal
                             //     span(title="spirit animal #{spirit_animal}")
@@ -19,7 +19,7 @@ template(name='profile')
                         a.ui.small.header.refresh_user_stats(href="/user/#{username}") 
                             |@#{username}
                         if is_admin
-                            a.ui.circular.basic.button(href="/user/#{username}/edit" title='admin edit account')
+                            a.ui.basic.button(href="/user/#{username}/edit" title='admin edit account')
                                 i.shield.icon
                                 |account
                         //- .ui.compact.icon.button.refresh_user_stats(title='refresh stats')
@@ -43,18 +43,18 @@ template(name='profile')
                             .ui.small.inline.header #{_id}
                                 
                         if is_current_user
-                            a.ui.circular.basic.button(href="/user/#{username}/edit" title='edit your account')
+                            a.ui.basic.button(href="/user/#{username}/edit" title='edit your account')
                                 i.cog.icon
                                 |account
-                            a.ui.circular.basic.button.logout(href="#" title='log out')
+                            a.ui.basic.button.logout(href="#" title='log out')
                                 i.sign.out.icon
                                 |log out
                         
                         unless is_current_user
-                            .ui.basic.circular.button.tip(title='send tip')
+                            .ui.basic.button.tip(title='send tip')
                                 i.dollar.green.icon
                                 span tip
-                        // a.ui.compact.basic.circular.button(href="/user/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
+                        // a.ui.compact.basic.button(href="/user/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
                         //     i.chat.blue.icon
                         //     | message
         
