--- a/parts/user_credit.jade
+++ b/parts/user_credit.jade
@@ -38,15 +38,15 @@ template(name='user_credit')
                     //- .ui.input
                     //-     input.add_amount(type='number')
                     //- .ui.horizontal.divider or
-                    .ui.circular.compact.basic.large.button.add_five_credits
+                    .ui.compact.basic.large.button.add_five_credits
                         |$5
-                    .ui.circular.compact.basic.large.button.add_ten_credits
+                    .ui.compact.basic.large.button.add_ten_credits
                         |$10
-                    .ui.circular.compact.basic.large.button.add_twenty_credits
+                    .ui.compact.basic.large.button.add_twenty_credits
                         |$20
-                    .ui.circular.compact.basic.large.button.add_fifty_credits
+                    .ui.compact.basic.large.button.add_fifty_credits
                         |$50
-                    .ui.circular.compact.basic.large.button.add_hundred_credits
+                    .ui.compact.basic.large.button.add_hundred_credits
                         |$100
             .column
                 .ui.segment
