--- a/client/reddit/reddit.jade
+++ b/client/reddit/reddit.jade
@@ -65,18 +65,18 @@ template(name='reddit')
                     |simple
                 // i.line.chart.icon
             if skv_is 'reddit_view_layout' 'grid'
-                .ui.compact.circular.large.button.set_grid(class=grid_class) 
+                .ui.compact.large.button.set_grid(class=grid_class) 
                     i.th.large.icon
                     |grid
             else
-                .ui.icon.compact.circular.large.button.set_grid(class=grid_class) 
+                .ui.icon.compact.large.button.set_grid(class=grid_class) 
                     i.th.large.icon
             if skv_is 'reddit_view_layout' 'list'
-                .ui.compact.circular.large.button.set_list(class=list_class)
+                .ui.compact.large.button.set_list(class=list_class)
                     i.list.large.icon
                     |list
             else
-                .ui.icon.compact.circular.large.button.set_list(class=list_class)
+                .ui.icon.compact.large.button.set_list(class=list_class)
                     i.list.large.icon
             .ui.icon.button.skip_left
                 i.chevron.left.icon
