--- a/client/reddit/ruser.jade
+++ b/client/reddit/ruser.jade
@@ -13,6 +13,9 @@ template(name='ruser')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
+                    a.ui.icon.button(href="/rusers")
+                        i.chevron.left.icon
+                        i.large.users.icon
                     img.ui.small.image(src=data.snoovatar_img)
                     .ui.large.inline.header.get_user_posts(class=post_header_class)
                         |!{username} 
