--- a/client/watson.jade
+++ b/client/watson.jade
@@ -101,25 +101,25 @@ template(name='doc_emotion_small')
     // .spacer
 
 template(name='call_watson')
-    button.ui.large.icon.circular.button.autotag
+    button.ui.large.icon.button.autotag
         i.dna.icon
         // |autotag
     if page_doc.watson 
         i.checkmark.icon
 // template(name='call_reddit')
-//     button.ui.large.icon.circular.button.call_reddit
+//     button.ui.large.icon.button.call_reddit
 //         i.reddit.icon
 //         // |autotag
 //     if rd
 //         i.checkmark.icon
 template(name='autotag')
-    button.ui.large.icon.circular.button.autotag
+    button.ui.large.icon.button.autotag
         i.dna.icon
         // |autotag
         if watson 
             i.checkmark.icon
 // template(name='call_tone')
-//     button.ui.icon.large.circular.button.call
+//     button.ui.icon.large.button.call
 //         i.smile.icon
 //         // |call tone
 //     if page_doc.tone 
@@ -264,8 +264,8 @@ template(name='categories')
 //                     i.chevron.up.link.grey.large.icon.upvote_sentence
 //                     i.chevron.down.link.grey.large.icon.downvote_sentence
 //                     each tones
-//                         // .ui.basic.inverted.small.compact.circular.label(class="{{calculated_size 'score'}} #{tone_label_class}") 
-//                         .ui.basic.inverted.small.compact.circular.label(class="#{tone_label_class}") 
+//                         // .ui.basic.inverted.small.compact.label(class="{{calculated_size 'score'}} #{tone_label_class}") 
+//                         .ui.basic.inverted.small.compact.label(class="#{tone_label_class}") 
 //                             span.ui.text
 //                                 |#{tone_id} &nbsp;
 //                             | {{ to_percent score }}% 
@@ -411,9 +411,9 @@ template(name='watson_full')
     //     |#{subreddit}
     a(href=url target='_window') #{url}
     // if in_dev
-    //     i.reddit.circular.link.icon.call_reddit_post
-    //     i.code.circular.link.icon.print_this
-    //     i.brain.circular.link.icon.calc_tone
+    //     i.reddit.link.icon.call_reddit_post
+    //     i.code.link.icon.print_this
+    //     i.brain.link.icon.calc_tone
     //     +call_watson mode='url' key='url'
     //     i.remove.link.icon
     //-     +call_watson mode='html'
