--- a/client/reddit/subreddit.jade
+++ b/client/reddit/subreddit.jade
@@ -21,7 +21,7 @@ template(name='subreddit')
                         +sub_unselect_tag
                 .ui.icon.input
                     i.search.icon
-                    input.search_subreddit(type='text')
+                    input.search_sub(type='text')
                 each subreddit_result_tags
                     // .ui.label #{this}
                     +sub_tag_selector
